--- a/NEWS
+++ b/NEWS
@@ -1,1 +1,5 @@
- 
+ Version 1.0
+ ------------------
+ * Compatibility with Affymetrix Clariom, HTA 2.0, MTA and RTA arrays
+ * Dropbox URL updated with required files for all arrays
+ * RNASeq pipeline stable
