--- a/vignettes/EventPointer.Rmd
+++ b/vignettes/EventPointer.Rmd
@@ -30,11 +30,11 @@ library(EventPointer)
 ```
 
 # Installation
-EventPointer can be installed from Bioconductor using the following lines:
+EventPointer can be installed from Bioconductor using the BiocManager package:
 
 ```{r, eval=FALSE}
-source("http://www.bioconductor.org/biocLite.R")
-biocLite("EventPointer")
+library(BiocManager)
+BiocManager::install("EventPointer")
 ```
 
 # Introduction
