replace BiocInstaller biocLite mentions with BiocManager

--- a/vignettes/EventPointer.Rmd
+++ b/vignettes/EventPointer.Rmd
@@ -33,8 +33,9 @@ library(EventPointer)
 EventPointer can be installed from Bioconductor using the following lines:
 
 ```{r, eval=FALSE}
-source("http://www.bioconductor.org/biocLite.R")
-biocLite("EventPointer")
+if (!requireNamespace("BiocManager", quietly=TRUE))
+    install.packages("BiocManager")
+BiocManager::install("EventPointer")
 ```
 
 # Introduction
