--- a/vignettes/EventPointer.Rmd
+++ b/vignettes/EventPointer.Rmd
@@ -64,7 +64,7 @@ To cite *EventPointer*:
 
 * Romero, Juan P., et al. "EventPointer: an effective identification of alternative splicing events using junction arrays." BMC genomics 17.1 (2016): 467. [doi:10.1186/s12864-016-2816-x](http://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-016-2816-x)
 
-* Romero, Juan P., et al Comparison on the ability to detect splicing events between RNAseq and HTAv2 **(In preparation)**
+* Romero, Juan P., et al. "Comparison of RNA-seq and microarray platforms for splice event detection using a cross-platform algorithm." BMC genomics 19.1 (2018): 703. [doi:10.1186/s12864-018-5082-2](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-018-5082-2)
 
 ![**Figure 2.** Overview of *EventPointer*](Romero_Fig1.png)
 
@@ -773,7 +773,7 @@ for (jj in 1:ncol(Cmatrix)) {
 # References
 
 * Romero, Juan P., et al. "EventPointer: an effective identification of alternative splicing events using junction arrays." BMC genomics 17.1 (2016): 467. 
-* Romero, Juan P., et al Comparison on the ability to detect splicing events between RNAseq and HTAv2 **(In preparation)**
+* Romero, Juan P., et al. "Comparison of RNA-seq and microarray platforms for splice event detection using a cross-platform algorithm." BMC genomics 19.1 (2018): 703.
 * Goldstein, Leonard D., et al. "Prediction and Quantification of Splice Events from RNA-Seq Data." PloS one 11.5 (2016): e0156132.
 * Seshagiri, Somasekar, Eric W Stawiski, Steffen Durinck, Zora Modrusan, Elaine E Storm, Caitlin B Conboy, Subhra Chaudhuri, et al. 2012. “Recurrent R-spondin fusions in colon cancer.” Nature 488 (7413): 660–64.
 
